# spot_sim

src/lidar_simulator/lidar_description/launch/: example.launch  run_rviz.launch
src/lidar_simulator/lidar_description/urdf/: example.urdf.xacro
src/spot_simulation/: README.md
src/spot_simulation/rs_base/src/rs_base/: quadruped_controller.py
src/spot_simulation/rs_command/: CMakeLists.txt  package.xml
src/spot_simulation/rs_command/launch/: move_to_point.launch  path_plan.launch  path_plan_and_follow.launch
src/spot_simulation/rs_command/scripts/: A_star.py  follow_way_points.py  move_to_point.py  straight_line_2_the_goal.py
src/spot_simulation/rs_command/srv/: ReqWayPoints.srv
src/spot_simulation/rs_command/urdf/: marker.urdf.xacro
src/spot_simulation/rs_description/launch/: description_with_lidar.launch
src/spot_simulation/rs_description/urdf/: spot_os1.urdf.xacro
src/spot_simulation/rs_gazebo/launch/: robot.launch
src/spot_simulation/rs_gazebo/models/ss_hq4/403_table/: model.sdf
src/spot_simulation/rs_gazebo/worlds/: ss_hq4.world
src/spot_simulation/rs_inverse/scripts/: Bezier.py  env_tester.py
src/spot_simulation/rs_teleop/launch/: control_command.launch
src/spot_simulation/rs_teleop/scripts/: control_command.py  teleop_rs_keyboard.py
src/spot_simulation/rs_viz/launch/: view_lidar_points.launch
src/spot_simulation/rs_viz/rviz/: lidar.rviz
src/teleop_legged_robots/launch/: teleop.launch
src/teleop_legged_robots/src/: teleop_legged_robots.py
